Add default units, update docs

--- a/docs/examples/as3600.ipynb
+++ b/docs/examples/as3600.ipynb
@@ -27,7 +27,8 @@
     "    RectangularStressBlock,\n",
     ")\n",
     "from concreteproperties.design_codes import AS3600\n",
-    "from concreteproperties.results import MomentInteractionResults"
+    "from concreteproperties.post import si_kn_m, si_n_mm\n",
+    "from concreteproperties.results import BiaxialBendingResults, MomentInteractionResults"
    ]
   },
   {
@@ -68,8 +69,12 @@
    "source": [
     "print(concrete.name)\n",
     "print(f\"Density = {concrete.density} kg/mm^3\")\n",
-    "concrete.stress_strain_profile.plot_stress_strain(title=\"Service Profile\")\n",
-    "concrete.ultimate_stress_strain_profile.plot_stress_strain(title=\"Ultimate Profile\")\n",
+    "concrete.stress_strain_profile.plot_stress_strain(\n",
+    "    title=\"Service Profile\", eng=True, units=si_n_mm\n",
+    ")\n",
+    "concrete.ultimate_stress_strain_profile.plot_stress_strain(\n",
+    "    title=\"Ultimate Profile\", eng=True, units=si_n_mm\n",
+    ")\n",
     "print(\n",
     "    f\"Concrete Flexural Tensile Strength: {concrete.flexural_tensile_strength:.2f} MPa\"\n",
     ")"
@@ -92,7 +97,7 @@
    "source": [
     "print(steel.name)\n",
     "print(f\"Density = {steel.density} kg/mm^3\")\n",
-    "steel.stress_strain_profile.plot_stress_strain()"
+    "steel.stress_strain_profile.plot_stress_strain(eng=True, units=si_n_mm)"
    ]
   },
   {
@@ -240,7 +245,10 @@
    "outputs": [],
    "source": [
     "MomentInteractionResults.plot_multiple_diagrams(\n",
-    "    [f_mi_res, mi_res], [\"Factored\", \"Unfactored\"], fmt=\"-\"\n",
+    "    [mi_res, f_mi_res],\n",
+    "    [\"Unfactored\", \"Factored\"],\n",
+    "    fmt=\"-\",\n",
+    "    units=si_kn_m,\n",
     ")"
    ]
   },
@@ -294,7 +302,11 @@
     "n_cases = len(n_stars)\n",
     "\n",
     "# plot moment interaction diagram\n",
-    "ax = f_mi_res.plot_diagram(fmt=\"k-\", render=False)\n",
+    "ax = f_mi_res.plot_diagram(\n",
+    "    fmt=\"k-\",\n",
+    "    units=si_kn_m,\n",
+    "    render=False,\n",
+    ")\n",
     "\n",
     "# check to see if combination is within diagram and plot result\n",
     "for idx in range(n_cases):\n",
@@ -356,6 +368,7 @@
     "    [f_mi_res, f_mi_res_bil, f_mi_res_par],\n",
     "    [\"Rectangular\", \"Bilinear\", \"Parabolic\"],\n",
     "    fmt=\"-\",\n",
+    "    units=si_kn_m,\n",
     ")"
    ]
   },
@@ -400,15 +413,19 @@
    "outputs": [],
    "source": [
     "# plot case 1\n",
-    "ax = f_bb_res1.plot_diagram(fmt=\"x-\", render=False)\n",
-    "bb_res1.plot_diagram(fmt=\"o-\", ax=ax)\n",
-    "plt.show()\n",
+    "BiaxialBendingResults.plot_multiple_diagrams_2d(\n",
+    "    [bb_res1, f_bb_res1],\n",
+    "    labels=[\"Unfactored\", \"Factored\"],\n",
+    "    units=si_kn_m,\n",
+    ")\n",
     "print(f\"Average phi = {np.mean(phis1):.3f}\")\n",
     "\n",
     "# plot case 2\n",
-    "ax = f_bb_res2.plot_diagram(fmt=\"x-\", render=False)\n",
-    "bb_res2.plot_diagram(fmt=\"o-\", ax=ax)\n",
-    "plt.show()\n",
+    "BiaxialBendingResults.plot_multiple_diagrams_2d(\n",
+    "    [bb_res2, f_bb_res2],\n",
+    "    labels=[\"Unfactored\", \"Factored\"],\n",
+    "    units=si_kn_m,\n",
+    ")\n",
     "print(f\"Average phi = {np.mean(phis2):.3f}\")"
    ]
   },
