--- a/docs/examples/nzs3101.ipynb
+++ b/docs/examples/nzs3101.ipynb
@@ -27,6 +27,7 @@
     "    RectangularStressBlock,\n",
     ")\n",
     "from concreteproperties.design_codes import NZS3101\n",
+    "from concreteproperties.post import si_kn_m, si_n_mm\n",
     "from concreteproperties.results import (\n",
     "    MomentCurvatureResults,\n",
     "    MomentInteractionResults,\n",
@@ -75,10 +76,16 @@
     "ult_comp = concrete_40.ultimate_stress_strain_profile.get_ultimate_compressive_strain()\n",
     "print(f\"Ultimate Compressive Strain: {ult_comp:.4f}\")\n",
     "concrete_40.stress_strain_profile.plot_stress_strain(\n",
-    "    title=\"Concrete Serviceability Stress-Strain Profile\", fmt=\"-r\"\n",
+    "    title=\"Concrete Serviceability Stress-Strain Profile\",\n",
+    "    fmt=\"-r\",\n",
+    "    eng=True,\n",
+    "    units=si_n_mm,\n",
     ")\n",
     "concrete_40.ultimate_stress_strain_profile.plot_stress_strain(\n",
-    "    title=\"Concrete Ultimate Stress-Strain Profile\", fmt=\"-r\"\n",
+    "    title=\"Concrete Ultimate Stress-Strain Profile\",\n",
+    "    fmt=\"-r\",\n",
+    "    eng=True,\n",
+    "    units=si_n_mm,\n",
     ")"
    ]
   },
@@ -103,7 +110,10 @@
     "print(f\"Ultimate Tensile Strain = {ult_strain}\")\n",
     "print(f\"Overstrength Factor = {steel_300e.phi_os}\")\n",
     "steel_300e.stress_strain_profile.plot_stress_strain(\n",
-    "    title=\"Steel Stress-Strain Profile\", fmt=\"-r\"\n",
+    "    title=\"Steel Stress-Strain Profile\",\n",
+    "    fmt=\"-r\",\n",
+    "    eng=True,\n",
+    "    units=si_n_mm,\n",
     ")"
    ]
   },
@@ -458,6 +468,7 @@
     "    fmt=\"or\",\n",
     "    render=False,\n",
     "    moment=\"m_xy\",\n",
+    "    units=si_kn_m,\n",
     ")\n",
     "plt.gca().lines[0].set_linestyle(\"solid\")\n",
     "plt.gca().lines[0].set_marker(\"\")\n",
@@ -490,7 +501,7 @@
     "n_cases = len(n_stars)\n",
     "\n",
     "# plot moment interaction diagram\n",
-    "ax = f_mi_res.plot_diagram(fmt=\"-r\", render=False)\n",
+    "ax = f_mi_res.plot_diagram(fmt=\"-r\", render=False, units=si_kn_m)\n",
     "\n",
     "# check to see if combination is within diagram and plot result\n",
     "for idx in range(n_cases):\n",
@@ -541,12 +552,12 @@
    "outputs": [],
    "source": [
     "# plot case 1\n",
-    "ax = f_bb_res1.plot_diagram(fmt=\"-r\", render=False)\n",
+    "ax = f_bb_res1.plot_diagram(fmt=\"-r\", render=False, units=si_kn_m)\n",
     "ax.plot(M_o_T, 0, \"sk\")\n",
     "plt.show()\n",
     "\n",
     "# plot case 2\n",
-    "ax = f_bb_res2.plot_diagram(fmt=\"-r\", render=False)\n",
+    "ax = f_bb_res2.plot_diagram(fmt=\"-r\", render=False, units=si_kn_m)\n",
     "ax.plot(M_o_C, 0, \"ok\")\n",
     "plt.show()"
    ]
@@ -703,7 +714,10 @@
     ")\n",
     "\n",
     "concrete_25_prob.stress_strain_profile.plot_stress_strain(\n",
-    "    title=\"Mander Unconfined Stress-Strain Profile\", fmt=\"-r\"\n",
+    "    title=\"Mander Unconfined Stress-Strain Profile\",\n",
+    "    fmt=\"-r\",\n",
+    "    eng=True,\n",
+    "    units=si_n_mm,\n",
     ")"
    ]
   },
@@ -801,7 +815,12 @@
     "fail_mat = moment_curvature_results.failure_geometry.material.name\n",
     "print(f\"The failure material is:-\\n{fail_mat}\")\n",
     "\n",
-    "MomentCurvatureResults.plot_results(moment_curvature_results, fmt=\"-r\")\n",
+    "MomentCurvatureResults.plot_results(\n",
+    "    moment_curvature_results,\n",
+    "    fmt=\"-r\",\n",
+    "    eng=True,\n",
+    "    units=si_kn_m,\n",
+    ")\n",
     "mcr = conc_sec.calculate_cracked_properties(theta=0).m_cr / 1e6\n",
     "print(f\"Cracking moment is M_cr = {mcr:.2f} kNm\")"
    ]
