--- a/docs/user_guide/design_codes/as3600.rst
+++ b/docs/user_guide/design_codes/as3600.rst
@@ -21,11 +21,14 @@ created it must be assigned to the design code::
 ..  automethod:: concreteproperties.design_codes.as3600.AS3600.assign_concrete_section
   :noindex:
 
-.. note::
+.. warning::
 
-  To maintain unit consistency, the cross-section dimensions should be entered in
-  *[mm]*.
+  To maintain unit consistency, length dimensions must be entered in *[mm]*, force
+  dimensions entered in *[N]* and density dimensions entered |dunits|.
 
+.. |dunits| raw:: html
+
+  <em>[kg/mm<sup>3</sup>]</em>
 
 Creating Material Properties
 ----------------------------
