Fix NZ code density units

--- a/docs/examples/nzs3101.ipynb
+++ b/docs/examples/nzs3101.ipynb
@@ -105,7 +105,7 @@
    "outputs": [],
    "source": [
     "print(steel_300e.name)\n",
-    "print(f\"Density = {steel_300e.density} kg/m^3\")\n",
+    "print(f\"Density = {steel_300e.density} kg/mm^3\")\n",
     "ult_strain = steel_300e.stress_strain_profile.get_ultimate_tensile_strain()\n",
     "print(f\"Ultimate Tensile Strain = {ult_strain}\")\n",
     "print(f\"Overstrength Factor = {steel_300e.phi_os}\")\n",
@@ -695,7 +695,7 @@
     "# moment-curvature analysis\n",
     "concrete_25_prob = Concrete(\n",
     "    name=\"Mander Concrete\",\n",
-    "    density=2300,\n",
+    "    density=2.3e-6,\n",
     "    stress_strain_profile=ModifiedMander(\n",
     "        elastic_modulus=design_code.e_conc(prob_compressive_strength),\n",
     "        compressive_strength=prob_compressive_strength,\n",
@@ -737,7 +737,7 @@
    "outputs": [],
    "source": [
     "print(steel_275.name)\n",
-    "print(f\"Density = {steel_275.density} kg/m^3\")\n",
+    "print(f\"Density = {steel_275.density} kg/mm^3\")\n",
     "print(\n",
     "    f\"Probable yield strength = {steel_275.stress_strain_profile.get_yield_strength()}\"\n",
     "    f\" MPa\"\n",
