--- a/docs/user_guide/design_codes/nzs3101.rst
+++ b/docs/user_guide/design_codes/nzs3101.rst
@@ -21,10 +21,15 @@ created it must be assigned to the design code::
 ..  automethod:: concreteproperties.design_codes.nzs3101.NZS3101.assign_concrete_section
   :noindex:
 
-.. note::
+.. warning::
 
-  To maintain unit consistency, the cross-section dimensions should be entered in
-  *[mm]*.
+  To maintain unit consistency, length dimensions must be entered in *[mm]*, force
+  dimensions entered in *[N]* and density dimensions entered |dunits|, unless otherwise
+  specified in the documentation.
+
+.. |dunits| raw:: html
+
+  <em>[kg/mm<sup>3</sup>]</em>
 
 
 Creating Material Properties
